--- a/config/api-reservation-dev.yml
+++ b/config/api-reservation-dev.yml
@@ -15,6 +15,12 @@ spring:
   liquibase:
     change-log: classpath:db/changelog/db.changelog-root.xml
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
 server:
   port: 8090
   error:
