--- a/config/api-reservation-prod.yml
+++ b/config/api-reservation-prod.yml
@@ -14,7 +14,11 @@ spring:
       ddl-auto: validate
   liquibase:
     change-log: classpath:db/changelog/db.changelog-root.xml
-
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 server:
   port: 8090
   error:
